# N-Body-Physics-Engine

./: .gitignore  Body.hpp  CMakeLists.txt  Config.hpp  Constants.hpp  Force.cpp  Force.hpp  Integrator.cpp  Integrator.hpp  LICENSE  Output.hpp  Particle.cpp  Particle.hpp  README.md  Simulation.cpp  Simulation.hpp  bodies.csv  config.csv  generate_bodies.py  jpl_compare.py  main.cpp  render.py  simulator.cpp  trajectories.csv  visualize.py
Classes/Body/: Body.cpp  Body.hpp
Classes/Force/: Force.cpp  Force.hpp
Classes/Integrator/: Integrator.cpp  Integrator.hpp
Classes/Particle/: Particle.cpp
Classes/Simulation/: Simulation.cpp  Simulation.hpp
Classes/Vec_3D/: Vec_3D.cpp
Old/: Constants.hpp  main.cpp  render.py
Old/Classes/Body/: Body.cpp  Body.hpp
Old/Classes/Simulation/: Simulation.cpp  Simulation.hpp
Old/Classes/Vec_3D/: Vec_3D.hpp
scripts/: run.ps1  run.sh  test.ps1  test.sh
src/: Config.hpp  Output.hpp  jpl_compare.py  main.cpp  render.py  visualize.py
src/Force/: BarnesHut.cpp  BarnesHut.hpp  Force.cpp  Force.hpp
src/Integrator/: Integrator.cpp  Integrator.hpp
src/Output/: Output.cpp  Output.hpp
src/Particle/: Particle.cpp  Particle.hpp  aligned_soa.hpp
src/Simulation/: Simulation.cpp  Simulation.hpp
tests/: benchmark.cpp  unit_tests.cpp
